--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="home.html" class="logo">
+        <a href="index.html" class="logo">
             <span>S</span><span>B</span><span>C</span><span>S</span><span>M</span><span>I</span>
         </a>
         <nav>
