--- a/from-the-director-admissions.html
+++ b/from-the-director-admissions.html
@@ -548,16 +548,16 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="home.html" class="logo">
+        <a href="index.html" class="logo">
             <span>S</span><span>B</span><span>C</span><span>S</span><span>M</span><span>I</span>
         </a>
         <nav>
             <ul>
-                <li><a href="home.html#about">About</a></li>
-                <li><a href="home.html#admissions">Admissions</a></li>
-                <li><a href="home.html#academics">Academics</a></li>
-                <li><a href="home.html#athletics">Athletics</a></li>
-                <li><a href="home.html#summer">Summer</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#admissions">Admissions</a></li>
+                <li><a href="index.html#academics">Academics</a></li>
+                <li><a href="index.html#athletics">Athletics</a></li>
+                <li><a href="index.html#summer">Summer</a></li>
             </ul>
         </nav>
     </header>
@@ -566,7 +566,7 @@
         <div class="BackgroundPattern"></div>
         
         <div class="ContentWrapper">
-            <a href="home.html#admissions" class="BackToMain"><i class="fas fa-arrow-left"></i> Back to Admissions</a>
+            <a href="index.html#admissions" class="BackToMain"><i class="fas fa-arrow-left"></i> Back to Admissions</a>
             
             <div class="DirectorCard">
                 <div class="DirectorHeader">
