--- a/summer-classes.html
+++ b/summer-classes.html
@@ -308,16 +308,16 @@
 <body>
     <!-- Header -->
     <header>
-        <a href="home.html" class="logo">
+        <a href="index.html" class="logo">
             <span>S</span><span>B</span><span>C</span><span>S</span><span>M</span><span>I</span>
         </a>
         <nav>
             <ul>
-                <li><a href="home.html#about">About</a></li>
-                <li><a href="home.html#admissions">Admissions</a></li>
-                <li><a href="home.html#academics">Academics</a></li>
-                <li><a href="home.html#athletics">Athletics</a></li>
-                <li><a href="home.html#summer">Summer</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#admissions">Admissions</a></li>
+                <li><a href="index.html#academics">Academics</a></li>
+                <li><a href="index.html#athletics">Athletics</a></li>
+                <li><a href="index.html#summer">Summer</a></li>
             </ul>
         </nav>
     </header>
